@@ -9,6 +9,9 @@ v2.8.20:
   it will need various attributes (to perform home directory generation,
   for one). Thanks to Nikos Voutsinas <nvoutsin@noc.uoa.gr>.
   http://forums.proftpd.org/smf/index.php/topic,3562.0.html
+* Portability fix: don't use ldap_initialize() and ldap_unbind_ext_s()
+  unless we're building against the corresponding versions of the OpenLDAP
+  SDK.
 
 v2.8.19:
 * Fix compilation with old LDAP SDKs (LDAP_API_VERSION < 2000). Thanks to
